--- a/app/index.html
+++ b/app/index.html
@@ -4,6 +4,7 @@
         Bridge Game
       </title> 
       <script type="text/javascript" src="js/phaser.min.js"></script>
+       <script type="text/javascript" src="js/game.js"></script>
    </head> 
    <body>
    </body>
