--- a/app/index.html
+++ b/app/index.html
@@ -1,7 +1,7 @@
 <html> 
    <head>
       <title>
-        Bridge Game
+        Bridge Game Ines
       </title> 
       <script type="text/javascript" src="js/phaser.min.js"></script>
        <script type="text/javascript" src="js/game.js"></script>
